--- a/index.qmd
+++ b/index.qmd
@@ -1,18 +1,46 @@
 # Preface
 
-The goal of this book is to provide a comprehensive guide to creative coding using Pure Data (Pd). The book will cover various aspects of Pd, including sound synthesis, data visualization, and interactive installations.
-The content will be structured into chapters, each focusing on a specific topic or project. The chapters will include code examples, explanations, and visualizations to help readers understand the concepts and techniques used in PD.
+This book was born out of the classroom—but it does not stay there. It is the result of many years of teaching creative coding and interactive media at public universities, engaging with students from a wide range of disciplines, backgrounds, and interests. Over time, a common thread emerged: the desire to bridge artistic expression and technical skill, to write code not just as a means to an end, but as a space of exploration, experimentation, and play.
 
 ::: {.column-margin}
+![](/assets/images/cover_2.png){#cover .cover}
 :::
 
-## What are you going to learn?
+In these pages, you’ll find the distilled insights, exercises, and creative strategies that have shaped countless workshops and academic programs. The goal has always been twofold: to equip readers with the tools to build interactive digital systems, and to nurture a mindset where sound, movement, code, and structure can be explored as artistic materials. Whether it's a generative soundscape, a data-driven artwork, or a custom tool built from scratch, the projects in this book are designed to foster technical growth while encouraging individual expression.
 
-In this book, you will learn how to use Pure Data to create interactive audio-visual projects. You will explore various techniques for sound synthesis, data visualization, and interactive installations. The book will also cover best practices for organizing and managing your Pd projects, as well as tips for debugging and optimizing your code.
+This is not a manual in the traditional sense, nor is it a fixed curriculum. Instead, this book invites you to engage with Pure Data on your own terms, navigating its chapters in whatever order best suits your curiosity. The modular structure is intentional: it supports creative detours, sudden insights, and unexpected connections between ideas. You are encouraged to experiment, remix, and stretch the boundaries of the examples presented. Treat the book as both a guide and a sandbox—one where art, sound, code, and interactivity come alive through your engagement.
+
+Whether you're an artist exploring new tools, a programmer seeking creative outlets, or a student diving into the world of interactive media, I hope this book helps you discover how code can become a language for imagination.
+
+## Who am I?
+
+My name is **Ezequiel Abregú**, and I am a sound artist, composer, multi-instrumentalist, and researcher originally from Buenos Aires, Argentina. My artistic practice encompasses sound recordings, audio installations, performances, sound sculptures, sound design, and compositions for chamber music, choreography, and theater. I am particularly interested in the interplay between music, performance, sound art, live electronics, auditory and visual perception, interactive media, and the application of technology in art.
+
+::: {.column-margin}
+![Dr. Ezequiel Abregú](/assets/images/eabregu-pic.jpg){#cover .cover}
+:::
+
+I hold a Ph.D. focusing on the relationship between visual and auditory perception in sound art, and a degree in Composition with Electroacoustic Media from the National University of Quilmes (UNQ). My academic career includes teaching positions at several institutions: I am a professor at the University of Quilmes (Computing Applied to Music area), the National University of Arts (Multimedia Arts area), and the University of Tres de Febrero (Electronic Arts area).
+
+My passion for programming and digital audio applications has led me to explore various programming languages and tools over the past two decades, including C, C++, Python, and Pure Data. I am an advocate of the open-source philosophy, regularly working with Linux and sharing my projects in publicly accessible repositories. My technical expertise extends to hardware development using microcontrollers and single-board computers, enabling me to adopt a hands-on approach in both my artistic and research endeavors.
+
+More information about my work can be found on my personal website [ezequielabregu.net](https://ezequielabregu.net). 
+
+## What is this book about?
+
+This book is the result of years of teaching undergraduate and postgraduate courses at several public universities, where I had the opportunity to explore the intersection of creativity and technology with students from diverse backgrounds. The central aim of these courses—and now this book—has been to blend a creative mindset with programming skills to develop original tools, algorithms, and artworks. Through this synthesis, we also seek to deepen our understanding of sound, interactivity, and control protocols in both technical and expressive ways.
+
+Rather than offering a fixed, linear progression, the structure of this book is deliberately open and modular. Readers are encouraged to navigate the content according to their interests, needs, or curiosity. This flexibility supports an experimental approach to learning, where exploration and play are not only welcome but essential.
+
+By approaching programming as a creative practice, this book invites you to think, make, and reflect through code. Whether you're building an interactive sound installation, prototyping a digital instrument, or simply experimenting with new ideas, the goal is to empower you with the tools and concepts to express yourself in the digital domain—and to enjoy the process along the way.
 
 ## Who is this book for?
 
 This book is intended for anyone interested in learning about creative coding using Pure Data. It is suitable for beginners who are new to programming and want to explore the world of interactive media, as well as for experienced programmers looking to expand their skills in sound synthesis and data visualization.
+
+## What are you going to learn?
+
+In this book, you will learn how to use Pure Data to create interactive audio-visual projects. You will explore various techniques for sound synthesis, data visualization, and interactive installations. The book will also cover best practices for organizing and managing your Pd projects, as well as tips for debugging and optimizing your code.
 
 ## What are you don't going to learn?
 
@@ -28,8 +56,19 @@ If you are new to Pure Data or programming, there are several free online resour
 - [Pure Data FLOSS Manual](http://floss.booktype.pro/pure-data/introduction2/) – A beginner-friendly and comprehensive guide to Pure Data.
 - [Official Pure Data Documentation](https://msp.ucsd.edu/Pd_documentation/index.htm) – The official manuals and reference materials for Pure Data.
 - [Miller Puckette's "Theory and Techniques of Electronic Music"](https://msp.ucsd.edu/techniques/latest/book.pdf) – A comprehensive book by the creator of Pure Data, covering both theory and practical techniques.
+- [Programming Electronic Music in Pd](http://www.pd-tutorial.com/english/index.html) - Designed for self-study, principally for composers. It begins with explanations of basic programming and acoustic principles then gradually builds up to the most advanced electronic music processing techniques.
 
 These resources can be consulted before or alongside this book to strengthen your foundational knowledge.
+
+### Recommended Pure Data distributions
+
+This book is based on the `Vanilla`[^1] distribution of Pure Data, which is the most widely used version. However, there are several other distributions that you may find useful for specific projects or needs:
+
+[^1]: [puredata.info/downloads/pure-data](https://puredata.info/downloads/pure-data)
+
+- [Purr Data](https://agraef.github.io/purr-data/) – A fork of Pd-l2ork that focuses on usability and accessibility, with a more polished interface and additional features. Purr Data serves the same purpose, but offers a new and much improved graphical user interface and includes many 3rd party plug-ins. Like Pd, it runs on Linux, macOS and Windows, and is open-source throughout.
+
+- [Plugdata](https://plugdata.org/) – plugdata is a plugin wrapper designed for Miller Puckette's Pure Data (Pd), featuring an enhanced graphical user interface (GUI) created using JUCE, headed by Timothy Schoen. this project is still a work in progress, and may still have some bugs. By default, plugdata comes with the cyclone and ELSE collections of externals and abstractions. 
 
 ## Acknowledgements
 I would like to express my gratitude to the following individuals and organizations for their support and contributions to this book:
@@ -37,10 +76,7 @@ I would like to express my gratitude to the following individuals and organizati
 - [Pure Data](https://puredata.info/) for providing a powerful and flexible platform for creative coding.
 - [The Pd community](https://puredata.info/community) for their invaluable resources, tutorials, and support.
 - [The open-source community](https://opensource.org/) for their dedication to sharing knowledge and tools for creative coding.
- 
+
 
 ## License
 This book is licensed under the [Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License](https://creativecommons.org/licenses/by-nc-sa/4.0/). You are free to share and adapt the material, provided you give appropriate credit, do not use it for commercial purposes, and distribute your contributions under the same license.
-
-## How to use this book
-This book is designed to be read sequentially, but you can also jump to specific chapters or sections that interest you. Each chapter includes code examples and exercises to help you practice and apply what you've learned.
