--- a/index.qmd
+++ b/index.qmd
@@ -3,7 +3,7 @@
 This book was born out of the classroom—but it does not stay there. It is the result of many years of teaching creative coding and interactive media at public universities, engaging with students from a wide range of disciplines, backgrounds, and interests. Over time, a common thread emerged: the desire to bridge artistic expression and technical skill, to write code not just as a means to an end, but as a space of exploration, experimentation, and play.
 
 ::: {.column-margin}
-![](/assets/images/cover_2.png){#cover .cover}
+![](/assets/images/cover_3.png){#cover .cover}
 :::
 
 In these pages, you’ll find the distilled insights, exercises, and creative strategies that have shaped countless workshops and academic programs. The goal has always been twofold: to equip readers with the tools to build interactive digital systems, and to nurture a mindset where sound, movement, code, and structure can be explored as artistic materials. Whether it's a generative soundscape, a data-driven artwork, or a custom tool built from scratch, the projects in this book are designed to foster technical growth while encouraging individual expression.
@@ -57,13 +57,15 @@ If you are new to Pure Data or programming, there are several free online resour
 - [Official Pure Data Documentation](https://msp.ucsd.edu/Pd_documentation/index.htm) – The official manuals and reference materials for Pure Data.
 - [Miller Puckette's "Theory and Techniques of Electronic Music"](https://msp.ucsd.edu/techniques/latest/book.pdf) – A comprehensive book by the creator of Pure Data, covering both theory and practical techniques.
 - [Programming Electronic Music in Pd](http://www.pd-tutorial.com/english/index.html) - Designed for self-study, principally for composers. It begins with explanations of basic programming and acoustic principles then gradually builds up to the most advanced electronic music processing techniques.
+- [Patchstorage](https://patchstorage.com/platform/pd-vanilla/) - A community-driven platform for sharing and discovering Pure Data patches. It features a wide range of projects, from simple examples to complex installations, and serves as a valuable resource for learning and inspiration.
 
 These resources can be consulted before or alongside this book to strengthen your foundational knowledge.
 
+
+:::{.callout-warning icon="false"}
 ### Recommended Pure Data distributions
-
 This book is based on the `Vanilla`[^1] distribution of Pure Data, which is the most widely used version. However, there are several other distributions that you may find useful for specific projects or needs:
-
+:::
 [^1]: [puredata.info/downloads/pure-data](https://puredata.info/downloads/pure-data)
 
 - [Purr Data](https://agraef.github.io/purr-data/) – A fork of Pd-l2ork that focuses on usability and accessibility, with a more polished interface and additional features. Purr Data serves the same purpose, but offers a new and much improved graphical user interface and includes many 3rd party plug-ins. Like Pd, it runs on Linux, macOS and Windows, and is open-source throughout.
