Add Synthesis chapter content - Intro + Oscillator (without images)

--- a/references.bib
+++ b/references.bib
@@ -8,3 +8,47 @@
   url = {http://doi.org/10.16995/bst.71}
 }
 
+@article{sterne2011,
+  author = {Sterne, Jonathan and Rodgers, Tara},
+  title = {Poetics of signal processing},
+  journal = {differences},
+  year = {2011},
+  volume = {22},
+  number = {2-3},
+  pages = {31-53},
+  doi = {10.1215/10407391-1428834},
+  url = {https://doi.org/10.1215/10407391-1428834}
+}
+
+@book{theberge1997,
+  author = {Théberge, Paul},
+  title = {Any Sound You Can Imagine: Making Music/Consuming Technology},
+  publisher = {Wesleyan University Press},
+  address = {Hanover \& London},
+  year = {1997},
+  pages = {xx, 293},
+  isbn = {9780819563095}
+}
+
+@book{levistrauss1964,
+  author = {Lévi-Strauss, Claude},
+  title = {Le cru et le cuit},
+  series = {Mythologiques},
+  volume = {1},
+  publisher = {Plon},
+  address = {Paris},
+  year = {1964},
+  language = {french}
+}
+
+@book{helmholtz1860,
+  author = {Helmholtz, Hermann},
+  title = {On the Sensations of Tone as a Physiological Basis for the Theory of Music},
+  publisher = {Dover Publications},
+  address = {New York},
+  year = {1954},
+  edition = {2},
+  note = {Originally published in 1860},
+  pages = {608},
+  isbn = {0486607534}
+}
