Add sonification chapter

--- a/references.bib
+++ b/references.bib
@@ -52,3 +52,13 @@
   pages = {608},
   isbn = {0486607534}
 }
+
+@article{greshamlancaster2012,
+  author = {Gresham-Lancaster, Scot},
+  title = {Relationships of sonification to music and sound art},
+  journal = {AI and Society},
+  year = {2012},
+  volume = {27},
+  number = {2},
+  pages = {207--212}
+}
