Add Piano phase patch descriptions

--- a/references.bib
+++ b/references.bib
@@ -62,3 +62,24 @@
   number = {2},
   pages = {207--212}
 }
+
+@incollection{reich2002,
+  author = {Reich, Steve},
+  title = {Music as a Gradual Process},
+  booktitle = {Writings on Music 1965--2000},
+  publisher = {Oxford University Press},
+  address = {Oxford and New York},
+  year = {2002},
+  pages = {34--36}
+}
+
+@article{epstein1986,
+  author = {Epstein, Paul},
+  title = {Pattern Structure and Process in Steve Reich's Piano Phase},
+  journal = {The Musical Quarterly},
+  publisher = {Oxford University Press},
+  year = {1986},
+  volume = {72},
+  number = {4},
+  pages = {494--502}
+}
