Extend the euclidean algorithm section in sequencer.qmd

--- a/references.bib
+++ b/references.bib
@@ -83,3 +83,21 @@
   number = {4},
   pages = {494--502}
 }
+
+@article{brown2023,
+  author = {Brown, Andrew},
+  title = {Live Coding Patterns and a Toolkit for Pure Data},
+  journal = {Organised Sound},
+  year = {2023},
+  volume = {28},
+  pages = {1--12},
+  doi = {10.1017/S1355771823000365}
+}
+
+@inproceedings{toussaint2005,
+  author = {Toussaint, Godfried},
+  title = {The Euclidean Algorithm Generates Traditional Musical Rhythms},
+  year = {2005},
+  pages = {47--56}
+}
+
