Adding Space chapter - Exclude Resources folder

--- a/references.bib
+++ b/references.bib
@@ -101,3 +101,59 @@
   pages = {47--56}
 }
 
+@article{abregu2012,
+  author = {Abregú, E. L. and Calcagno, E. R. and Vergara, R. O.},
+  title = {La distancia como factor estructural de la música},
+  journal = {Revista Argentina de Musicología},
+  year = {2012},
+  number = {12-13},
+  pages = {379--400}
+}
+
+@book{basso2009,
+  editor = {Basso, Gustavo and Di Liscia, Oscar Pablo and Pampin, Juan},
+  title = {Música y Espacio: ciencia, tecnología y estética},
+  publisher = {Editorial de la Universidad Nacional de Quilmes},
+  address = {Buenos Aires},
+  year = {2009}
+}
+
+@book{knudsen1932,
+  author = {Knudsen, V. O.},
+  title = {Architectural Acoustics},
+  publisher = {J. Wiley y Sons},
+  year = {1932}
+}
+
+@techreport{risett1969,
+  author = {Risett, J. C.},
+  title = {An Introductory Catalogue of Computer Synthesized Sounds},
+  institution = {Bell Telephone Laboratories},
+  address = {Nueva Jersey},
+  year = {1969}
+}
+
+@book{schaeffer2003,
+  author = {Schaeffer, Pierre},
+  title = {Tratado de los objetos musicales},
+  translator = {Cabezón de Diego, Araceli},
+  publisher = {Alianza Editorial},
+  year = {2003}
+}
+
+@article{stockhausen1959,
+  author = {Stockhausen, Karlheinz},
+  title = {Musik im Raum},
+  journal = {Die Reihe},
+  year = {1959},
+  number = {5}
+}
+
+@book{wishart1996,
+  author = {Wishart, Trevor},
+  title = {On Sonic Art},
+  publisher = {Harwood Academic Publishers},
+  address = {Amsterdam},
+  year = {1996},
+  note = {Nueva edición, originalmente publicado en 1985 por Imagineering Press, New York}
+}
