Add cellular automata images (sequencer.md)

--- a/references.bib
+++ b/references.bib
@@ -157,3 +157,30 @@
   year = {1996},
   note = {Nueva edición, originalmente publicado en 1985 por Imagineering Press, New York}
 }
+
+@article{wolfram1983,
+  author = {Wolfram, Stephen},
+  title = {Statistical Mechanics of Cellular Automata},
+  journal = {Reviews of Modern Physics},
+  year = {1983},
+  volume = {55},
+  number = {3},
+  pages = {601--644},
+  doi = {10.1103/RevModPhys.55.601},
+  note = {Archived from the original on 21 September 2013. Retrieved 28 February 2011},
+  bibcode = {1983RvMP...55..601W}
+}
+
+@article{brummitt2012,
+  author = {Brummitt, Charles D. and Rowland, Eric},
+  title = {Boundary Growth in One-Dimensional Cellular Automata},
+  journal = {Complex Systems},
+  year = {2012},
+  volume = {21},
+  pages = {85--116},
+  eprint = {arXiv:1204.2172},
+  archivePrefix = {arXiv},
+  primaryClass = {nlin.CG},
+  doi = {10.48550/arXiv.1204.2172},
+  note = {26 pages, 11 figures}
+}
