Save Cellular Automata images locally

--- a/references.bib
+++ b/references.bib
@@ -184,3 +184,23 @@
   doi = {10.48550/arXiv.1204.2172},
   note = {26 pages, 11 figures}
 }
+
+@article{gardner1970,
+  author = {Gardner, Martin},
+  title = {MATHEMATICAL GAMES - The fantastic combinations of John Conway's new solitaire game life},
+  journal = {Scientific American},
+  year = {1970},
+  volume = {223},
+  number = {4},
+  pages = {120--123},
+  url = {http://www.jstor.org/stable/24927642}
+}
+
+@misc{kalbande2022,
+  author = {Kalbande, Swaraj},
+  title = {Conway's Game of Life – Life on Computer},
+  journal = {Medium},
+  year = {2022},
+  url = {https://medium.com/@swarajkalbande123/conways-game-of-life-life-on-computer-b7edfc85d21a},
+  note = {Accessed May 26, 2025}
+}
